
(267) When switching to game mode under X11, no ConfigureNotify event
will happen and consequently no reshape callback will ever be called via
the normal mechanism. To fix this, note that the game mode window needs
to be resized and handle this before redraw.

(268) The original glutEnterGameMode() returns the window id of the game
mode window, not TRUE/FALSE, we should better follow that. Note that most
man pages claim that this function returns void, but this is definitely
wrong.

(269) Dan Torop's patch to fix joystick polling times (resolves bug 1206856)

**************************************************************************
* 25 May 2005 -- 2.4.0 Release Candidate 4 Released
**************************************************************************

(270) Takeshi Nishimura's changes to make the Windows mouse wheel/button mapping match that of X11; also fixing a typo in the associated mouse callback argument list.

**************************************************************************
* 2 Jun 2005 -- 2.4.0 Release Candidate 5 Released
**************************************************************************

**************************************************************************
* 9 Jun 2005 -- 2.4.0 Released
**************************************************************************

**************************************************************************
* Changes in late June 2005
**************************************************************************

(271) Added an RPM spec file based on the one shipped with SuSE 9.3.

(272) Implemented Joe Krahn's "Input Devices" code--at the moment, a dial
box.

(273) Fixed a bug in the Sierpinski sponge code that caused the application
to crash if it called the code with a negative number of levels

(274) Added --enable-debug configure flag. Currently it only turns on X11
event tracing, but in the future we could add more.

(275) Cleaned up CreateNotify/ConfigureNotify handling.